@@ -1153,6 +1153,8 @@ e_week_view_update_query (ECalView *cal_view)
 		g_assert (comp_data != NULL);
 		process_component (week_view, comp_data);
 	}
+
+	e_cal_view_set_status_message (E_CAL_VIEW (week_view), NULL);
 }
 
 static void
